--- a/app/src/main/res/layout/layout_country_item.xml
+++ b/app/src/main/res/layout/layout_country_item.xml
@@ -1,20 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <data>
+
+        <variable
+            name="selected_country"
+            type="com.muhammad.coutry.list.coutryinfo.model.CountryModel" />
+
+    </data>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/country_item_info_image"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:minHeight="100dp"
-            android:maxHeight="120dp"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
             android:layout_margin="5dp"
-            android:src="@mipmap/ic_launcher_round" />
+            android:downloadUrl="@{selected_country.countryImageUrl}" />
 
         <TextView
             android:id="@+id/country_item_info_name"
@@ -22,8 +27,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:padding="5dp"
-            android:gravity="center_horizontal"
-            android:text="TextView"
+            android:text="@{selected_country.countryName}"
             android:textSize="20sp" />
 
         <TextView
@@ -32,8 +36,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:padding="5dp"
-            android:gravity="center_horizontal"
-            android:text="TextView"
+            android:text="@{selected_country.countryRegion}"
             android:textSize="16sp" />
 
         <TextView
@@ -42,8 +45,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:padding="5dp"
-            android:gravity="center_horizontal"
-            android:text="TextView"
+            android:text="@{selected_country.countryCurrency}"
             android:textSize="16sp" />
 
 
@@ -53,11 +55,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:padding="5dp"
-            android:gravity="center_horizontal"
-            android:text="TextView"
+            android:text="@{selected_country.countryLanguage}"
             android:textSize="16sp" />
-
-
 
     </LinearLayout>
 
