--- a/app/src/main/res/layout/layout_feed_item.xml
+++ b/app/src/main/res/layout/layout_feed_item.xml
@@ -1,10 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <data>
+
+        <variable
+
+            name="country"
+            type="com.muhammad.coutry.list.coutryinfo.model.CountryModel" />
+
+        <variable name="listener"
+            type="com.muhammad.coutry.list.coutryinfo.model.CountryListener" />
+
+    </data>
+
     <LinearLayout
         android:id="@+id/feed_item_main_layout"
         android:layout_width="match_parent"
         android:layout_height="200dp"
+        android:onClick="@{listener.onClickCountry}"
         android:orientation="horizontal">
 
         <ImageView
@@ -13,9 +26,7 @@
             android:layout_height="match_parent"
             android:layout_weight="2"
             android:layout_margin="5dp"
-            android:minHeight="100dp"
-            android:maxHeight="120dp"
-            android:src="@mipmap/ic_launcher_round"
+            android:downloadUrl="@{country.countryImageUrl}"
             android:contentDescription="@string/country_flag" />
 
         <LinearLayout
@@ -30,7 +41,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
-                android:text="@string/country_name_text"
+                android:text="@{country.countryName}"
                 android:textSize="20sp"
                 android:textColor="@color/black" />
 
@@ -39,7 +50,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
-                android:text="@string/region_name_title"
+                android:text="@{country.countryRegion}"
                 android:textSize="18sp"
                 android:textColor="@color/black" />
 
